fixed data not loading on user creation fixed some layout issues

--- a/src/Pages/HomePage/HomePage.css
+++ b/src/Pages/HomePage/HomePage.css
@@ -17,3 +17,9 @@
 .feed-song:hover {
   background-color: var(--background-color-hover);
 }
+
+@media (orientation: portrait) {
+  .feed {
+    height: calc(100vh - 70px);
+  }
+}
