--- a/src/Pages/ProjectsPage/ProjectsPage.css
+++ b/src/Pages/ProjectsPage/ProjectsPage.css
@@ -35,6 +35,14 @@
   height: 30px;
 }
 
+.projects-page-message {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+}
+
 /* VERTICAL */
 
 @media (orientation: portrait) {
